<resources>
    <string name="app_name">siakad</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nim">
           1202164069
</string>
    <string name="jurusan">
       S1 Sistem Informasi
</string>

    <string-array name="user_type">
        <item>--Choose Type User--</item>
        <item>Mahasiswa</item>
        <item>Prodi</item>
        <item>Staf</item>
    </string-array>
    <string name="forgot_pass">
forgot password
</string>
    <string name="don_t_have_">
Do not have an account?  register here
</string>
    <string name="universitas">
Universitas Islam Negeri ANTASARI BANJARMASIN
</string>
    <string name="copyright_2">
Copyright 2018 June SIAKAD App. all rights reserved
</string>
    <string name="welcome_to_">
Welcome To SIAKAD
</string>
    <string name="nama">
BELLANOFI BUDIYAWATI
</string>

    <string name="daftar_mata">
DAFTAR MATAKULIAH YANG DIAMBIL
</string>

    <style name="profile">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>

    <string name="profile">
PROFILE
</string>

    <string name="s1_sistem_i">
       S1 Sistem Informasi
</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="absensi">
ABSENSI
</string>
    <string name="semester_1">
Semester 1
</string>
    <string name="bellanofi_b">
       Bellanofi Budiyawati
</string>
    <string name="some_id">
=
</string>
    <string name="upload_file">
Upload file
</string>
    <string name="post_file">
Post file
</string>
    <string name="write_a_com">
Write a comment...
</string>
    <string name="reply">
Reply
</string>
    <string name="qatrun_nada">
Qatrun Nada
</string>
    <string name="lorem_ipsum">
Lorem ipsumi dosed do eulan sectuteradipiscing elit, sed do eualh ahdoie ah orem ipsumised do eualh sectuec ed do eualh ahdoie ah orem ipsumi
</string>

</resources>
