<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:orientation="vertical"
    android:background="@drawable/welcomebcg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/menu"
                android:layout_alignParentRight="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="326dp"
            android:src="@drawable/alarm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_to_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_"
            android:textAppearance="@style/welcome_to_"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textAppearance="@style/nama"
            android:gravity="center_horizontal"
            />

        <View
            android:id="@+id/ellipse"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            android:onClick="beranda"
            android:background="@drawable/kamera" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

            <TextView
                android:id="@+id/universitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/universitas"
                android:textAppearance="@style/universitas" />

            <TextView
                android:id="@+id/copyright_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/copyright_2"
                android:textAppearance="@style/copyright_2" />
    </LinearLayout>

</LinearLayout>