<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="385dp"
        android:layout_height="171dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="281dp"
        android:layout_height="89dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="16dp" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="281dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="13dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="75dp" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="63dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_5"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="109dp" />

    <View
        android:id="@+id/vector"
        android:layout_width="9dp"
        android:layout_height="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector3"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/upload_file"
        android:layout_width="40dp"
        android:layout_height="9dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/upload_file"
        android:textAppearance="@style/upload_file"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="111dp" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="57dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_6"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/post_file"
        android:layout_width="54dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/post_file"
        android:textAppearance="@style/post_file"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="138dp" />

    <View
        android:id="@+id/foto"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/foto"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/write_a_com"
        android:layout_width="112dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/write_a_com"
        android:textAppearance="@style/write_a_com"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="16dp" />

    <View
        android:id="@+id/ellipse"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/reply"
        android:layout_width="48dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/reply"
        android:textAppearance="@style/reply"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="278dp" />

    <View
        android:id="@+id/reply_512"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/reply_512"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="278dp" />

    <View
        android:id="@+id/seeicons_57"
        android:layout_width="14dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/seeicons__"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/qatrun_nada"
        android:layout_width="81dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/qatrun_nada"
        android:textAppearance="@style/qatrun_nada"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="235dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/lorem_ipsum"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="220dp" />
</android.support.constraint.ConstraintLayout>